examples/errors/map_init_expression/main.lc

function main() {
    let a = #{
        "one": "1",
				"two": 2,
		};
}
